--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: http://localhost:4000
 
 # Jekyll configuration
 
-permalink:   /:categories/:title/
+permalink:   /:year/:month/:day/:title/
 markdown:    kramdown
 highlighter: rouge
 sass:
